--- a/Website/src/pages/index.astro
+++ b/Website/src/pages/index.astro
@@ -1,41 +1,68 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Nav from "../components/nav.astro";
+import Noticia from "../components/noticia.astro";
 ---
 
 <Layout title="SaviLinux | Inicio">
   <Nav />
   <main
-    class="p-2 grid grid-cols-3"
-    style="grid-template-columns: 1fr 7fr 2fr;"
+    class="h-11/12 p-4 grid items-start place-content-start grid-cols-1 md:grid-cols-[5fr_1fr] gap-6"
   >
-    <aside class="w-full flex flex-row items-center justify-center">
+    <section class="h-full flex flex-col items-start justify-center gap-6">
+      <article class="text-center place-self-center">
+        <h1
+          class="text-5xl font-bold text-white flex flex-row items-center justify-center"
+        >
+          <span class="rounded-l-lg p-2 bg-green-600">¡Bienvenid@</span>
+          <span class="p-2 bg-yellow-700">a</span>
+          <span class="rounded-r-lg p-2 bg-red-600">SaviLinux!</span>
+        </h1>
+        <p class="text-xl text-gray-700">
+          Un sistema operativo basado en Linux para todos
+        </p>
+      </article>
+      <article>
+        <h3 class="text-xl font-bold text-gray-800">
+          ¿Te imaginas una distribución Linux diseñada específicamente para las
+          necesidades de los usuarios mexicanos?
+        </h3>
+        <p class="text-md text-gray-600">
+          SaviLinux busca crear, desarrollar y mantener una distribución de
+          Linux que refleje la diversidad cultural de México, mejorando la
+          experiencia de los usuarios y fomentando una comunidad activa de
+          desarrolladores.
+        </p>
+      </article>
+      <article class="text-center">
+        <h3 class="text-xl font-bold text-gray-800">
+          Únete a nosotros en esta revolución tecnológica y sé parte del cambio.
+        </h3>
+        <button
+          class="mt-4 h-8 w-36 px-4 text-white font-bold bg-green-600 hover:bg-green-700 transition duration-300 rounded-lg shadow-lg flex items-center justify-center"
+        >
+          <img src="/github.png" alt="GitHub" class="h-6 mr-2" />
+          <a href="https://github.com/S4vianR/SaviLinux" target="_blank">
+            ¡Contribuye!
+          </a>
+        </button>
+      </article>
+    </section>
+    <aside class="h-full flex flex-col items-center">
       <!-- Noticias -->
       <article class="w-full flex flex-col gap-4">
-        <h2 class="text-2xl font-bold">Noticias</h2>
+        <h2 class="text-2xl font-bold text-gray-800">Noticias</h2>
         <ul class="flex flex-col gap-4">
-          <li class="flex flex-col gap-1">
-            <h4 class="text-base font-bold">SaviLinux 1.0.0</h4>
-            <p class="text-sm">
-              ¡Ya está disponible la versión 1.0.0 de SaviLinux! Descárgala
-              <a href="/descargas" class="underline text-green-700">aquí</a>
-            </p>
-          </li>
-          <li class="flex flex-col gap-1">
-            <h4 class="text-base font-bold">Nueva página web</h4>
-            <p class="text-sm">
-              ¡Estrenamos página web! Esperamos que os guste.
-            </p>
-          </li>
+          <Noticia
+            titulo="SaviLinux en desarrollo"
+            descripcion="¡Estamos trabajando en la próxima versión de SaviLinux! Esten atentos a las novedades."
+          />
+          <Noticia
+            titulo="Nueva página web"
+            descripcion="¡Estrenamos página web!"
+          />
         </ul>
       </article>
-    </aside>
-    <section class="w-full flex flex-col items-center justify-center">
-      <h1 class="text-4xl font-bold">¡Bienvenido a SaviLinux!</h1>
-      <p class="text-lg">Un sistema operativo basado en Linux para todos</p>
-    </section>
-    <aside class="w-full flex flex-row items-center justify-center">
-      <!-- Additional content can go here -->
     </aside>
   </main>
 </Layout>
